force-app/main/default/objects/PurchaseOrder__c/fields/FinalProposal__c.field-meta.xml
<CustomField>
    <fullName>FinalProposal__c</fullName>
    <label>Final Proposal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>