force-app/main/default/objects/PurchaseOrder__c/fields/FinalSupplier__c.field-meta.xml
<CustomField>
    <fullName>FinalSupplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>PurchaseOrders</relationshipName>
    <type>Lookup</type>
</CustomField>