force-app/main/default/objects/PurchaseOrder__c/fields/FinalSupplierContact__c.field-meta.xml
<CustomField>
    <fullName>FinalSupplierContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Supplier Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>PurchaseOrders</relationshipName>
    <type>Lookup</type>
</CustomField>