force-app/main/default/objects/PurchaseOrder__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <label>Total Price</label>
    <summarizedField>PurchaseOrderItem__c.UnitPrice__c</summarizedField>
    <summaryForeignKey>PurchaseOrderItem__c.PurchaseOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>